# ChangeLog for app-i18n/fcitx
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx/ChangeLog,v 1.18 2007/01/05 16:17:08 flameeyes Exp $

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> fcitx-3.1.1.ebuild,
  fcitx-3.2.1.ebuild, fcitx-3.4.ebuild:
  Convert to use elog.

*fcitx-3.4 (07 Oct 2006)

  07 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> +fcitx-3.4.ebuild:
  Version bumped.

*fcitx-3.2.1 (09 Aug 2006)

  09 Aug 2006; MATSUU Takuto <matsuu@gentoo.org> fcitx-3.1.1.ebuild,
  +fcitx-3.2.1.ebuild:
  Version bumped, bug 143294.
  Fixed SRC_URI, bug 126940.
  Added ~amd64.

  21 Feb 2006; Alastair Tse <liquidx@gentoo.org> fcitx-3.1.1.ebuild:
  fix bad libXft dep (#123630)

  21 Feb 2006; Alastair Tse <liquidx@gentoo.org> -fcitx-2.0.1.ebuild:
  cleaned up last v2 ebuild for fcitx

  16 Feb 2006; Alastair Tse <liquidx@gentoo.org> fcitx-3.1.1.ebuild:
  stable bump for x86 (#103046)

  10 Feb 2006; Alastair Tse <liquidx@gentoo.org> -fcitx-1.8.5.ebuild,
  -fcitx-2.1.0_rc.ebuild, -fcitx-3.0.4.ebuild, fcitx-3.1.1.ebuild:
  modular X deps. cleanup

  30 Apr 2005; David Holm <dholm@gentoo.org> fcitx-3.1.1.ebuild:
  Readded to ~ppc

*fcitx-3.1.1 (18 Apr 2005)

  18 Apr 2005; Alastair Tse <liquidx@gentoo.org> +fcitx-3.1.1.ebuild:
  version bump with mirror (#89474)

*fcitx-3.0.4 (01 Mar 2005)

  01 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> +fcitx-3.0.4.ebuild:
  Version bumped. Thanks to Jackey Yang <043936y@acadiau.ca>; bug #82900.

  23 Jun 2004; David Holm <dholm@gentoo.org> fcitx-2.1.0_rc.ebuild:
  Added to ~ppc.

  22 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> fcitx-1.8.5.ebuild,
  fcitx-2.0.1.ebuild:
  Removed default S. Marked 2.0.1 stable.

*fcitx-2.1.0_rc (21 Jun 2004)

  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +fcitx-2.1.0_rc.ebuild:
  Version bumped. Ebuild provided by Jackey Yang <043936@acadiau.ca>,
  closing bug #52551 (fcitx-2.0.2 has a serious bug with mozilla & opera)
