@@ -1,0 +1,3 @@
+MD5 30ca366f7c08ea96da69689adb8d55f7 fcitx-3.4.2.tar.bz2 3155032
+RMD160 dcefea101b3674cf5d3e20630b352127a4a15116 fcitx-3.4.2.tar.bz2 3155032
+SHA256 64d8f4183593c7c3a855b4b1d07afe605d9548cefdbfc07b1d0f79fc3f4c02ed fcitx-3.4.2.tar.bz2 3155032
