@@ -1,0 +1,3 @@
+MD5 1acf177eef8ad4ba46417350f4c6bb74 fcitx-3.5-070403.tar.bz2 3900539
+RMD160 cf8b46ef7dc8af194c42c171a2d54caefcfccd79 fcitx-3.5-070403.tar.bz2 3900539
+SHA256 2661f133094dd3f963a6ea7d3998f713b9fd043b805aa60cc2b6a181f645491c fcitx-3.5-070403.tar.bz2 3900539
