@@ -1,6 +1,13 @@
 # ChangeLog for app-i18n/fcitx
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx/ChangeLog,v 1.18 2007/01/05 16:17:08 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/fcitx/ChangeLog,v 1.19 2007/04/27 16:53:30 matsuu Exp $
+
+*fcitx-3.5_pre070403 (27 Apr 2007)
+*fcitx-3.4.2 (27 Apr 2007)
+
+  27 Apr 2007; MATSUU Takuto <matsuu@gentoo.org> +fcitx-3.4.2.ebuild,
+  +fcitx-3.5_pre070403.ebuild:
+  Version bumped, bug #168303.
 
   05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> fcitx-3.1.1.ebuild,
   fcitx-3.2.1.ebuild, fcitx-3.4.ebuild:
